10-concorrencia; virtual threads e semaphore